--- a/src/App.css
+++ b/src/App.css
@@ -199,7 +199,6 @@ body {
   background-color: var(--background-secondary);
   width: 100%;
   padding: 16px;
-  background-color: #F8F8F8;
   border-radius: 6px;
 
 }
@@ -208,10 +207,9 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 16px;
   background-color: var(--card-bg);
   border-radius: 6px;
-  margin-top: 8px;
+  margin-top: 22px;
 }
 
 .welcome-header {
@@ -229,13 +227,12 @@ body {
 .welcome-header p {
   font-size: 14px;
   color: var(--secondary-color);
-  margin: 0;
 }
 
 .instruction-box {
   border: 1px dashed rgba(0, 0, 0, 0.2);
   border-radius: 8px;
-  padding: 24px;
+  padding: 22px;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -526,7 +523,7 @@ body {
 .loading-spinner {
   display: flex;
   justify-content: center;
-  padding: 24px;
+  padding: 28px;
 }
 
 .loading-spinner::after {
@@ -678,7 +675,7 @@ body {
   flex-direction: column;
   align-items: start;
   text-align: center;
-  background-color: #F3F3F3;
+  background-color: var(--background-tertiary);
   border-radius: 7px;
   padding: 8px;
 }
@@ -850,6 +847,7 @@ body {
 
 .tab {
   padding: 6px 12px;
+  font-family: 'Inter', -apple-system, BlinkMacSystemFont, sans-serif;
   background: none;
   border: none;
   border-radius: 4px;
@@ -867,13 +865,14 @@ body {
 .issue-types-container {
   display: flex;
   flex-direction: column;
-  gap: 12px;
+  gap: 11px;
   padding: 2px;
-  background-color: var(--background-secondary);
+  
 }
 
 .issue-type-container {
-  background-color: #F8F8F8;
+  background-color: var(--background-tertiary);
+  color: var(--text-color);
   border-radius: 6px;
   overflow: hidden;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
