--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 :root {
   --background-color: #ffffff;
+  --stat-box-color: #F3F3F3;
   --background-secondary: #F8F8F8;
   --background-tertiary: #F3F3F3;
   --text-color: #000000;
@@ -21,9 +22,10 @@
 }
 
 [data-framer-theme="dark"] {
-  --background-color: #1a1a1a;
+  --background-color: #111111;
+  --stat-box-color: #555555;
   --background-secondary: #2B2B2B;
-  --background-tertiary: #555555;
+  --background-tertiary: #2B2B2B;
   --text-color: #ffffff;
   --text-secondary-color: #a0a0a0;
   --primary-color: #0099ff;
@@ -207,7 +209,7 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  background-color: var(--card-bg);
+  background-color: var(--background-color);
   border-radius: 6px;
   margin-top: 12px;
 }
@@ -673,7 +675,7 @@ body {
   flex-direction: column;
   align-items: start;
   text-align: center;
-  background-color: var(--background-tertiary);
+  background-color: var(--stat-box-color);
   border-radius: 7px;
   padding: 8px;
 }
@@ -737,14 +739,16 @@ body {
   display: flex;
   flex-direction: column;
   width: 100%;
-  padding: 16px;
+  gap: 2px;
+  padding-left: 16px;
+  padding-top: 16px;
   background-color: var(--background-secondary);
 
   border-radius: 6px;
 }
 
 .completed-header {
-  margin-bottom: 16px;
+  margin-bottom: 20px;
   text-align: c;
 }
 
@@ -925,7 +929,7 @@ body {
   display: flex;
   align-items: center;
   gap: 6px;
-  background: var(--card-bg);
+  background: var(--background-color);
   border: none;
   font-size: 12px;
   font-weight: 600;
@@ -1010,3 +1014,6 @@ body {
 .locate-button:hover {
   background-color: var(--hover-bg);
 }
+
+
+
