--- a/src/App.css
+++ b/src/App.css
@@ -5,6 +5,7 @@
   --background-tertiary: #F3F3F3;
   --text-color: #000000;
   --text-secondary-color: #6c757d;
+  --expand-section: #FFFFFF;
   --primary-color: #0099ff;
   --secondary-color: #6c757d;
   --critical-color: #dc3545;
@@ -27,6 +28,7 @@
   --background-secondary: #2B2B2B;
   --background-tertiary: #2B2B2B;
   --text-color: #ffffff;
+  --expand-section: #333333;
   --text-secondary-color: #a0a0a0;
   --primary-color: #0099ff;
   --secondary-color: #9e9e9e;
@@ -940,14 +942,12 @@ body {
 
 .issue-type-content {
   padding: 0 16px 16px;
-  border-top: 1px solid #f0f0f0;
-  border-top: 1px solid var(--border-color);
+  background-color: var(--background-secondary);
 }
 
 .issue-type-description {
   color: var(--secondary-color);
   font-size: 14px;
-  margin-top: 12px;
   margin-bottom: 16px;
 }
 
@@ -956,19 +956,21 @@ body {
   flex-direction: column;
   padding: 12px;
   border-radius: 4px;
-  background-color: var(--background-tertiary);
+  background-color: var(--expand-section);
   margin-bottom: 8px;
-  align-items: flex-start;
+  align-items: start;
 }
 
 .issue-info {
-  margin-left: 8px;
+  margin-left: 2px;
 }
 
 .issue-location {
   font-weight: 500;
   font-size: 14px;
   margin-bottom: 4px;
+  
+  
 }
 
 .issue-description {
@@ -1015,5 +1017,6 @@ body {
   background-color: var(--hover-bg);
 }
 
-
-
+.svg-path {
+  fill: var(--text-color);
+}
